@@ -1,3 +1,7 @@
+2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* TabItem.cs: It uses Selector events now.
+
 2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* ProgessBar.cs: Optimized and made closer to Microsoft implementation.
